# mulle-bootstrap

./: .gitignore  CMakeLists.txt  CMakePackage.txt  COMMANDS.md  FAQ.md  IDEAS-v3.0.md  IDEAS-v4.0.md  INSTALL.md  LICENSE  Makefile  README.md  RELEASENOTES.md  SETTINGS.md  TODO.md  check-backticks.sh  demo-session.html  exekutor_test.sh  generate-brew-formula.sh  install.sh  mulle-bootstrap  mulle-bootstrap-auto-update.sh  mulle-bootstrap-brew.sh  mulle-bootstrap-build.sh  mulle-bootstrap-clean.sh  mulle-bootstrap-convert-pre-0.10.sh  mulle-bootstrap-dotdump  mulle-bootstrap-fetch.sh  mulle-bootstrap-functions.sh  mulle-bootstrap-gcc.sh  mulle-bootstrap-init.sh  mulle-bootstrap-install.sh  mulle-bootstrap-local-environment.sh  mulle-bootstrap-refresh.sh  mulle-bootstrap-scm.sh  mulle-bootstrap-scripts.sh  mulle-bootstrap-settings.sh  mulle-bootstrap-setup-xcode.sh  mulle-bootstrap-tag.sh  mulle-bootstrap-warn-scripts.sh  mulle-bootstrap-xcode.sh  (+9 more)
.bootstrap/: brews  taps
ConsoleMovies/: demo.drehbuch  tutorial.drehbuch
TermRecord/: demo.drehbuch  tutorial.drehbuch
demo/: README.md
demo/.bootstrap/: gits  repositories
demo/.bootstrap/settings/Finch/: xcode_public_headers
demo/.bootstrap/settings/zlib/: dispense_headers_path
dox/: CMakeLists.txt.example  COMMANDS.md  FAQ.md  INSTALL.md  NAQ2.md  SCRIPTS.md  SETTINGS.md  USE_LIBRARY.md  biginheritpicture.dot  bigpicture.dot  build-scripts.dot  fetch-operations.md  fetch-scripts.dot  install.dot  make-svg.sh  mulle-bootstrap-5.graffle  symlinks.dot
dox/fetch/: 1-reposdir.dot  2.fetch-update-detail.dot  repository-change-tracking.md
dox/minions/: 0-minions.dot  1-minions.dot  2-minions.dot
dox/mulle-brew/: README.md
dox/settings/: SETTING_KEYS.md
dox/settings/copy/: 1-copy.dot  2-copy.dot  3-copy.dot  4-copy.dot  5-settings-chain.dot  6-settings-complex.dot  COPY.md  make-svg.sh
dox/settings/dispense_style/: 1-none.dot  2-configuration.dot  3-configuration-sdk.dot  DISPENSE_STYLE.md
dox/settings/types/: 1-scene.dot  2-b-knows-c 2.dot  3-a-knows-b.dot  4-c-knows-itself.dot  SETTING_TYPES.md  build-search.dot  config-search.dot  fetch-search.dot
dox/steps/: 0-loop.dot  1-build.dot  2-scene.dot  3-create.dot  4-fetch.dot  5-refresh.dot  6-fetch.dot  7-refresh.dot  8-final.dot  FETCH.md  make-svg.sh
mulle-project/: formula-info.sh  post-release.sh  publisher-info.sh  version-info.sh
src/: dependency-example.dot  mulle-bootstrap-array.sh  mulle-bootstrap-auto-update.sh  mulle-bootstrap-brew.sh  mulle-bootstrap-build-environment.sh  mulle-bootstrap-build.sh  mulle-bootstrap-clean.sh  mulle-bootstrap-command.sh  mulle-bootstrap-common-settings.sh  mulle-bootstrap-copy.sh  mulle-bootstrap-core-options.sh  mulle-bootstrap-defer.sh  mulle-bootstrap-dependency-resolve.sh  mulle-bootstrap-fetch.sh  mulle-bootstrap-flags.sh  mulle-bootstrap-functions.sh  mulle-bootstrap-gcc.sh  mulle-bootstrap-init.sh  mulle-bootstrap-install.sh  mulle-bootstrap-local-environment.sh  mulle-bootstrap-log.sh  mulle-bootstrap-logging.sh  mulle-bootstrap-mingw.sh  mulle-bootstrap-mv-force.sh  mulle-bootstrap-paths.sh  mulle-bootstrap-project.sh  mulle-bootstrap-refresh.sh  mulle-bootstrap-repositories.sh  mulle-bootstrap-scm.sh  mulle-bootstrap-scripts.sh  mulle-bootstrap-settings.sh  mulle-bootstrap-shell.sh  mulle-bootstrap-show.sh  mulle-bootstrap-snip.sh  mulle-bootstrap-status.sh  mulle-bootstrap-systeminstall.sh  mulle-bootstrap-tag.sh  mulle-bootstrap-warn-scripts.sh  mulle-bootstrap-xcode.sh  mulle-bootstrap-zombify.sh  (+9 more)
templates/: CMakePackage.txt.scion  README.md.scion  RELEASENOTES.md.scion  templates_README.md
templates/dox/: INSTALL.md.scion
templates/dox/mulle-brew/: README.md.scion
templates/dox/steps/: FETCH.md.scion
test/: README.md
test/A/A.xcodeproj/: project.pbxproj
test/B/.bootstrap/: gits
test/Big/.bootstrap/: gits  preferences
test/C/.bootstrap/: gits  sdks
test/C/C.xcodeproj/: project.pbxproj
test/C/src/: C.h
tests/: run-test.sh
tests/01-simple-cloned/: run-test.sh
tests/02-simple_symlinked/: run-test.sh
tests/03-simple_embedded/: run-test.sh
tests/04-deep/: run-test.sh
tests/05-deep_embedded/: run-test.sh
tests/06-dependency/: run-test.sh
tests/07-embedded_symlink/: run-test.sh
tests/08-refresh/: run-test.sh
tests/09-refresh_embedded/: run-test.sh
tests/10-settings/: run-test.sh
tests/11-copy/: run-test.sh
tests/12-move-clone/: run-test.sh
tests/12-move_clone/: run-test.sh
tests/13-scripts/: run-test.sh
tests/14-master/: run-test.sh
tests/15-local-repositories/: run-test.sh
tests/16-expanded-merge/: run-test.sh
tests/17-deep_embedded_environment/: run-test.sh
tests/18-cmake/: run-test.sh
tests/19-tar/: run-test.sh
tests/20-defer_embedded/: README.md  run-test.sh
tests/21-defer_advanced/: run-test.sh
tests/22-required/: run-test.sh
tests/23-embedded_required/: run-test.sh
tests/24-transform_clone/: run-test.sh
tests/25-copy_setting_with_space/: run-test.sh
tests/@simple/: run-test.sh
tests/@simple_embedded/: run-test.sh
tests/broken/13-scripts/: run-test.sh
tests/deep/: run-test.sh
tests/dependency/: run-test.sh  test-dependencies.sh
tests/embedded-symlink/: run-test.sh
tests/refresh/: refresh.sh  run-test.sh
tests/refresh-embedded/: run-test.sh
tests/refresh_embedded/a/: README.md
tests/settings/: run-test.sh
tutorial/: README-cmake.md  README-xcodebuild.md  README.md  clean.sh
tutorial/A/: CMakeLists.txt
tutorial/A/A.xcodeproj/: project.pbxproj
tutorial/A/src/: A.h  A.m
tutorial/B/: CMakeLists.txt
tutorial/B/B.xcodeproj/: project.pbxproj
tutorial/B/src/: B.h  B.m
tutorial/C/: CMakeLists.txt
tutorial/C/src/: C.m
tutorial/a/: CMakeLists.txt
tutorial/a/a.xcodeproj/: project.pbxproj
tutorial/a/src/: a.c  a.h
tutorial/b/: CMakeLists.txt
tutorial/b/b.xcodeproj/: project.pbxproj
tutorial/b/src/: b.c  b.h
tutorial/c/: CMakeLists.txt
tutorial/c/c.xcodeproj/: project.pbxproj
tutorial/c/src/: c.c  c.h  main.c
xcode-demo/: README.md
xcode-demo/.bootstrap/settings/zlib/: dispense_headers_path
